@@ -618,3 +618,5 @@ hacking/ChangeLog: the small scale changelog for libspectrum
          sna format snapshots (Fred).
 20080315 accessor.pl,sna.c,snap_accessors.txt,snapshot.c,szx.c,z80.c: support
          for Beta 128 custom ROMs in snapshots (patch #1844606) (Stuart).
+20080319 ide.c: changes to allow DivIDE to support FATware from
+         http://www.dusky.sk/zxs/; add ATA/ATAPI commands 0x21, 0x31, 0xA1.
